rtest/tests/jsr335/Semantics/LambdaExpressions/InnerClasses/ShouldFail/syntax05/Test.java
// .result=COMPILE_FAIL


public class Test {	
	public interface TestInterface {
		public void functMethod(int a);
	}
	
	
	public static void main(String[] args) {
		TestInterface t = a -> {
			Runnable r = new Runnable() {
				public void run() { int b = a; }
			};
			a--;
		};
    }

}